--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -56,6 +56,18 @@
 		text-align: center;
 	}
 	
+	.button-big
+    {
+        padding: 0em 4em;
+        display: inline-block;
+        margin-top: 2em;
+        font-size: 1.4em;
+        font-weight: 900;
+        text-align: center;
+        text-transform: uppercase;
+        cursor: pointer;
+    }
+	
 	.divider
 	{
 		margin-top: 4em;
@@ -193,13 +205,32 @@
 
 	#banner
 	{
+        position: relative;
+        top: -20px;
+        background: #333 url(../images/banner-mobile.jpg) no-repeat center;
+        background-size: cover;
 		padding: 3em 0em;
 	}
 
 
 	.homepage #banner
 	{
-		padding: 5em 0em;
+		padding: 8em 0em;
+	}
+
+	#banner-bottom .box-right
+	{
+		float: center;
+        width: 100%;
+	}
+	
+	#banner-bottom h2
+	{
+		margin: 0em;
+		padding: 0em;
+		font-weight: 400;
+		font-size: 2.3em;
+		color: #3E454C;
 	}
 
 /*********************************************************************************/
