--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -274,3 +274,26 @@
 		padding: 3em 0em;
 	}
 	
+
+/*********************************************************************************/
+/* Social Icon Styles                                                            */
+/*********************************************************************************/
+	
+	ul.contact li
+	{
+		display: inline-block;
+		padding: 0em 0.5em;
+		font-size: 2em;
+	}
+	
+	ul.contact li a:before
+	{
+		display: inline-block;
+		background: #3f3f3f;
+		width: 50px;
+		height: 50px;
+		line-height: 50px;
+		border-radius: 35px;
+		text-align: center;
+		color: #FFFFFF;
+	}
